--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,7 +2,7 @@
 	margin-top: 9px;
 }
 
-.jumbotron {
+.jumbotron.hero {
 	margin-top: 50px;
 	background: url(../images/herobg.jpg) center center;
 	background-size: cover;
@@ -19,3 +19,27 @@
 	text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.8);
 }
 
+img.screen {
+	-webkit-box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 21px -4px rgba(0,0,0,0.75);
+}
+
+.row {
+	margin-bottom: 30px;
+	padding-bottom: 30px;
+	border-bottom: 1px solid #eee;
+}
+
+.row.last {
+	border-bottom: none;
+}
+
+footer h4 {
+	font-weight: 800;
+	color: #ccc;
+}
+
+footer ul.icons {
+	list-style: none;
+}
